# IGNITE-843 Fixed dropdown overflow.

--- a/modules/control-center-web/src/main/js/public/stylesheets/style.scss
+++ b/modules/control-center-web/src/main/js/public/stylesheets/style.scss
@@ -146,7 +146,7 @@ ul.navbar-nav, .sidebar-nav {
 }
 
 .theme-line ul.dropdown-menu {
-    min-width: 75px;
+    min-width: 120px;
     max-width: 500px;
     max-height: 20em;
     overflow: auto;
@@ -156,7 +156,7 @@ ul.navbar-nav, .sidebar-nav {
          display: block;
 
          cursor: default;
-         padding: 3px 0 3px 5px;
+         padding: 3px 5px;
 
          overflow: hidden;
          white-space: nowrap;
@@ -167,7 +167,8 @@ ul.navbar-nav, .sidebar-nav {
              color: $brand-primary;
              background-color: transparent;
              line-height: $line-height-base;
-             margin-right: 5px;
+             margin-left: 5px;
+             margin-right: 0px;
          }
      }
 }
